Creación del modulo shared, creación del componente sidebar,

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,25 @@
 <div class="d-flex">
-  <div>
-    Hola
+
+  <app-sidebar></app-sidebar>
+
+  <!--Busqueda-->
+  <div class="container">
+    <div class="row p-3">
+      <div class="col">
+        <h5>Buscar</h5>
+        <input type="text" class="form-control" placeholder="Buscar gifts..."> 
+      </div>
+      
+    </div>
+    <!--Fin de Busqueda-->
+    <hr />
+   
+    <div class="row">
+      <div class="col">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque ipsam ex modi quidem neque quia eaque, commodi corrupti, nihil adipisci mollitia voluptatum saepe unde quibusdam debitis. Praesentium magni recusandae deserunt!
+      </div>
+    </div>
+      
   </div>
-  <div>
-    Mundo
-  </div>
+
 </div>
