--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -4,8 +4,12 @@
     <hr class="text-white"/>
 
     <div class="list-group list-reset">
-      <a href="#" class="list-group-item list-group-item-action">
-        Dashboard
+      <a 
+       *ngFor="let element of historial"
+        href="#" 
+        class="list-group-item list-group-item-action"        
+      >
+       {{element | titlecase}}
       </a>
     </div>
     
